--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-hans">
 <head>
   <meta charset="UTF-8">
   <title>playlist-sync</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="edge">
+  <meta content="telephone=no" name="format-detection" />
 </head>
 <body>
+  <div id="app">
 
+  </div>
 </body>
 </html>
